<resources>
    <string name="app_name">Finance Calculator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Manoj Kumar Reddy</string>
    <string name="nav_header_subtitle">manojkumar.lakkireddy@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_tax">Tax Calculator</string>
    <string name="menu_emi">EMI Calculator</string>
    <string name="salary">Salary</string>
    <string name="submit">Submit</string>
    <string name="regime_2">Regime 2</string>
    <string name="regime_1">Regime 1</string>
    <string name="tax_regimes">Regime 1</string>
    <string name="tax_slab_to">Slab To</string>
    <string name="tax_slab_from">Slab From</string>
    <string name="tax_slab_value">Tax</string>
    <string name="tax_regime_2">Regime 2</string>
    <string name="tax_regime_1">Regime 1</string>
    <string name="tax_total_table_end">Total</string>

    <string name="title_activity_tax_results">TaxResultsActivity</string>
    <string name="tab_text_1">Regime 1</string>
    <string name="tab_text_2">Regime 2</string>
    <string name="tax_to_pay">Tax To Pay</string>
    <string name="tax_deduction_80c">tax_deduction_80C</string>
    <string name="tax_deduction_80CC">tax_deduction_80CC</string>
    <string name="tax_deduction_hip">tax_deduction_hip</string>
    <string name="tax_deduction_hra">tax_deduction_hra</string>
    <string name="tax_deduction_home_loan">tax_deduction_home_loan</string>
    <string name="tax_deduction_edu_loan">tax_deduction_edu_loan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>